--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "firebase": "^7.14.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-player": "^2.0.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "react-scroll": "^1.7.16",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8"
   },
