--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^7.14.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-parallax": "^3.0.3",
     "react-player": "^2.0.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
