--- a/package.json
+++ b/package.json
@@ -14,12 +14,9 @@
     "react-dom": "^16.13.1",
     "react-parallax": "^3.0.3",
     "react-player": "^2.0.1",
-    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-scroll": "^1.7.16",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8"
+    "react-scroll": "^1.7.16"
   },
   "scripts": {
     "start": "react-scripts start",
